# liquidity-delivery

./: .dockerignore  .gitignore  .gitmodules  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  txtx.yml
.github/instructions/: solver.instructions.md
artifacts/erc7683/: spec.md
contracts/: OrderBook.sol
deployments/: Dockerfile.deployer  docker-compose.yml
deployments/config/: local-assets.json  quoter-devnet.yaml  quoter-local.yaml  quoter-mainnet.yaml  solana-keypair.json  solver-devnet.yaml  solver-local.yaml  solver-mainnet.yaml
deployments/frontend/: .dockerignore  .env.tpl  Dockerfile  package-lock.json  tailwind.config.js
deployments/quoter/: Cargo.toml  Dockerfile  config_example.yaml
deployments/scripts/: deploy-local.sh
deployments/substreams/: Cargo.toml  Makefile  README.md  indexes.sql  schema.sql  substreams-sepolia.yaml  substreams-solana-devnet.yaml
deployments/substreams/evm-orderbook/: Cargo.toml  build.rs  substreams.yaml
deployments/substreams/evm-orderbook/abi/: orderbook_contract.abi.json
deployments/substreams/evm-orderbook/proto/: contract.proto
deployments/substreams/evm-orderbook/src/: lib.rs
deployments/substreams/evm-orderbook/src/abi/: orderbook_contract.rs
deployments/substreams/evm-orderbook/src/pb/: .last_generated_hash  contract.v1.rs
deployments/substreams/orderbook/: Cargo.toml  Dockerfile  substreams-sepolia.yaml  substreams-solana-devnet.yaml
deployments/substreams/orderbook/idls/: program.json
deployments/substreams/orderbook/proto/: program.proto
deployments/substreams/orderbook/src/: lib.rs
deployments/substreams/orderbook/src/abi/: mod.rs
deployments/substreams/orderbook/src/pb/: .last_generated_hash  mod.rs  schema.rs  sf.ethereum.transform.v1.rs  sf.ethereum.type.v2.rs  substreams.v1.program.rs
deployments/substreams/src/: lib.rs
deployments/substreams/src/pb/: .last_generated_hash  mod.rs
deployments/substreams/svm-orderbook/: substreams.yaml
deployments/substreams/svm-orderbook/proto/: program.proto
deployments/substreams/svm-orderbook/src/: lib.rs
deployments/substreams/svm-orderbook/src/pb/: .last_generated_hash  substreams.v1.program.rs
docker/: Dockerfile.deployer
docker-compose/: Dockerfile.deployer  docker-compose.yml
docker-compose/config/: quoter-devnet.yaml  quoter-local.yaml  quoter-mainnet.yaml  solver-devnet.yaml  solver-mainnet.yaml
docker-compose/frontend/: index.html  nginx.conf  package.json  vite.config.ts
docker-compose/quoter/: Dockerfile  config_example.yaml
docker/config/: quoter-local.yaml  solver-local.yaml
docker/scripts/: deploy-local.sh  fund-solana.sh
evm/: .env.dev  .env.example  .env.prod  .prettierrc.json  .solhint.json  CLAUDE.md  Makefile  README.md  foundry.toml  package.json
evm/config/: chains.dev.json  chains.json  chains.prod.json
evm/deployments/: 1.json  11155111.json  143.json  2288.json  4114.json  4153.json  42161.json  421614.json  8453.json  84532.json
evm/ops/: cancel-order.sh  configure-routes.sh  deploy.sh  fill-order.sh  open-order.sh  pause.sh  propose-upgrade.sh  transfer-admin-roles.sh  transfer-pauser-role.sh  transfer-roles.sh  upgrade.sh
evm/script/: ScriptBase.s.sol
evm/src/: OrderBook.sol
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  appkit.ts  main.ts  style.css  vite-env.d.ts
guides/: chain_deployment_plan.md  solver_integration.md
quoter/: Cargo.toml  Dockerfile  README.md  config_example.yaml
quoter/src/: api_server.rs  config.rs  contracts.rs  evm_order_tracker.rs  grpc_server.rs  main.rs  models.rs  order_store.rs  svm_order_tracker.rs
quoter/src/transaction_builder/: error.rs  evm.rs  mod.rs  order_id.rs  svm.rs
solver/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  config_example.yaml
solver/proto/: quoter.proto
solver/src/: config.rs  error.rs  events.rs  lib.rs  loki.rs  main.rs  stores.rs
solver/src/api/: api.rs  mod.rs
solver/src/components/: api_server.rs  event_logger.rs  evm_event_listener.rs  evm_writer.rs  inventory_manager.rs  mod.rs  order_confirmer.rs  order_listener.rs  order_processor.rs  order_producer.rs  order_timer.rs  quoter_client.rs  svm_event_listener.rs  svm_writer.rs
solver/src/contracts/: evm.rs
solver/src/events/: event_bus.rs  events.rs  evm.rs  mod.rs  svm.rs
solver/src/providers/: mod.rs  provider_manager.rs  signers.rs
solver/src/stores/: asset_store.rs  balance_store.rs  mod.rs  order_store.rs
solver/src/utils/: chains.rs  logger.rs  mod.rs  svm.rs
solver/tests/: api_tests.rs  component_tests.rs  integration_test.rs  integration_tests.rs  mock_api.rs  order_tests.rs  svm_tests.rs  tracing_capture.rs
solver/tests/artifacts/: MockMessenger.json
solver/tests/common/: log_buffer.rs  mock_api.rs  mock_quoter.rs  mod.rs  svm.rs
solver/tests/fixtures/: base_test_suite.rs  chain_test_suite.rs  lite_test_suite.rs  mod.rs  test_suite.rs
src/: OrderBook.sol
svm/: .env.svm  Anchor.toml  Makefile  README.md  jest.config.js  package.json  tsconfig.json  txtx.yml  txtx.yml.tpl
svm/ops/: open-order.sh
svm/programs/order_book/: Cargo.toml
svm/programs/order_book/idls/: messenger.json  order_book.json  portal.json
svm/programs/order_book/src/: constants.rs  error.rs  lib.rs  utils.rs
svm/programs/order_book/src/instructions/: admin.rs  cancel.rs  claim_refund.rs  close_order_token_account.rs  configure_destination.rs  destination.rs  fill.rs  initialize.rs  mod.rs  open.rs  report_cancel.rs  report_fill.rs  request_cancel.rs
svm/programs/order_book/src/state/: mod.rs  orders.rs
svm/programs/order_book/tests/: mod.rs
svm/programs/order_book/tests/instructions/: cancel_foreign_order.rs  cancel_native_order.rs  claim_refund.rs  close_order_token_account.rs  destination.rs  fill.rs  initialize.rs  mod.rs  open.rs  pause.rs  report_cancel.rs  report_fill.rs  request_cancel.rs
svm/scripts/: open-order.ts
(+130 files in other folders)
