[package]
name = "quoter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
slog-async = "2.8"
slog-json = "2.6"
slog-term = "2.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }

# EVM event tracking
alloy = { version = "1.0", features = ["providers", "provider-ws", "sol-types", "contract", "rpc-types"] }
futures-util = "0.3"
serde_yaml = "0.9"
thiserror = "1.0"

# Solana transaction building
solana-sdk = "2.2"
solana-client = "2.2"
solana-transaction-status = "2.2"
spl-token = "8.0"
spl-associated-token-account = "7.0"
borsh = "1.5"
bincode = "1.3"
base64 = "0.22"
bs58 = "0.5"
hex = "0.4"
url = "2.5"

[build-dependencies]
tonic-build = "0.12"
