[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
m0-liquidity-sdk = "0.0.2"
order_book = { version = "0.1.0", path = "../svm/programs/order_book" }
hex = "0.4.3"
dotenvy = "0.15"
alloy = { version = "1.0.38", features = [
    "providers",
    "provider-ws",
    "sol-types",
    "contract",
    "rpc-types",
    "signer-local",
    "node-bindings",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anchor-client = { version = "0.31.1", features = ["async"] }
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
governor = "0.6"

[dev-dependencies]
mockito = "1.7.0"
