[package]
name = "solver"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
slog = "2.7"
slog-json = "2.6"
slog-term = "2.9"
slog-async = "2.8"
chrono = "0.4"
m0-liquidity-sdk = "0.0.4"
order_book = { version = "0.1.0", path = "../svm/programs/order_book" }
hex = "0.4.3"
serde_yaml = "0.9"
alloy = { version = "1.0.38", features = [
    "providers",
    "provider-ws",
    "sol-types",
    "contract",
    "rpc-types",
    "rpc-types-trace",
    "signer-local",
    "node-bindings",
    "provider-debug-api",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anchor-client = { version = "0.31.1", features = ["async"] }
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
governor = "0.6"
nanoid = "0.4"
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
solana-client = "2.2.4"
solana-transaction-status-client-types = "2.2.4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
mockito = "1.7.0"
test-context = { version = "0.5.4" }
ctor = "0.2"
regex = "1.11"
reqwest = { version = "0.12.23", features = ["json"] }
quoter = { path = "../quoter" }
portpicker = "0.1"
anchor-spl = "0.31.1"
