[package]
name = "orderbook-substream"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "0.7"
substreams-solana = "0.14"
substreams-solana-program-instructions = "0.3"
anchor-lang = ">=0.31.0"
sologger_log_context = "0.1.2"
base64 = "0.22.1"
ethabi = "17"
hex-literal = "0.3.4"
substreams-ethereum = "0.11"
num-traits = "0.2.15"
num-bigint = "0.4"

# Required so that anchor-lang dependencies build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
