[package]
name = "order_book"
version = "0.1.0"
description = "SVM implementation of the M0 limit order specification for cross-chain liquidity delivery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "order_book"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "0.31.1"
solana-security-txt = "1.1.1"

[dev-dependencies]
alloy = { version = "1.0.38", features = ["sol-types"] }
anchor-litesvm = "0.2"
litesvm = "0.8.1"